--- a/frontend/static/frontend/partials/parts.html
+++ b/frontend/static/frontend/partials/parts.html
@@ -1,19 +1,36 @@
 <div class="container-fluid" ng-show="ready">
+    <div class="form-group">
+        <label for="sel1">Location:</label>
+        <select class="form-control" id="sel1" ng-model="selected">
+            <option ng-repeat="location in locations track by $index" value="{{ location.name }}">{{ location.name }}</option>
+        </select>
+    </div>
+    <hr />
+    <label>Parts:</label>
     <div class="list-group">
-        <a ng-repeat="part in parts track by $index"
-           href class="list-group-item" ng-click="collapse($index)">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xs-3"><img class="img-circle" width="100" height="100" ng-src="{{ part.image }}" /></div>
-                    <div class="col-xs-9">
-                        <label>Number:</label> {{ part.number }} <br />
-                        <label>Location:</label> {{ part.location.name }} <br />
-                        <label>To stock:</label> {{ part.qty_to_stock }} <br />
-                        <label>On hand:</label> {{ part.qty_on_hand }} <br />
-                        <label>On order:</label> {{ part.qty_on_order }}
+        <div ng-repeat="part in parts| filter: {location: {name: selected}} track by $index">
+            <a href class="list-group-item" ng-click="part.isCollapsed = !part.isCollapsed"
+                ng-class="{'active': part.isCollapsed}">{{ part.number }}</a>
+            <div uib-collapse="!part.isCollapsed">
+                <div class="well">
+                    <div class="row">
+                        <div>
+                            <div class="text-center"><img class="img-circle" width="100" height="100" ng-src="{{ part.image || noImage }}" /></div>
+                            <div class="text-center">
+                                <h2>{{ part.number }}</h2>
+                                <small>{{ part.description }}</small>
+                            </div>
+                            <div class="text-center"><button ng-disabled="sending || !part.qty_on_hand" ng-click="takeOne(part)" class="btn btn-warning">Take one</button></div>
+                        </div>
+                        <hr />
+                        <div class="text-center">
+                            <label>To stock:</label> {{ part.qty_to_stock }} <br />
+                            <label>On hand:</label> {{ part.qty_on_hand }} <br />
+                            <label>On order:</label> {{ part.qty_on_order }} <br />
+                        </div>
                     </div>
                 </div>
             </div>
-        </a>
+        </div>
     </div>
 </div>
