--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -96,6 +96,7 @@
 <script src="{% static "frontend/bower_components/angular/angular.min.js" %}"></script>
 <script src="{% static "frontend/bower_components/angular-ui-router/release/angular-ui-router.min.js" %}"></script>
 <script src="{% static "frontend/bower_components/angular-animate/angular-animate.min.js" %}"></script>
+<script src="{% static "frontend/bower_components/angular-sanitize/angular-sanitize.min.js" %}"></script>
 <script src="{% static "frontend/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js" %}"></script>
 <script src="{% static "frontend/bower_components/angular-messages/angular-messages.min.js" %}"></script>
 <script src="{% static "frontend/bower_components/angular-resource/angular-resource.min.js" %}"></script>
@@ -118,6 +119,7 @@
         'ngMessages',
         'ngAnimate',
         'ngRoute',
+        'ngSanitize',
         'satellizer',
         'snap'
     ]);
