--- a/frontend/static/frontend/partials/parts.html
+++ b/frontend/static/frontend/partials/parts.html
@@ -27,6 +27,8 @@
                             <label>To stock:</label> {{ part.qty_to_stock }} <br />
                             <label>On hand:</label> {{ part.qty_on_hand }} <br />
                             <label>On order:</label> {{ part.qty_on_order }} <br />
+                            <label>Price:</label> ${{ part.price }} <br />
+                            <label>Vendor:</label> {{ part.vendor.name }} <br />
                         </div>
                     </div>
                 </div>
