add price, vendor to parts show

--- a/frontend/static/frontend/partials/parts.html
+++ b/frontend/static/frontend/partials/parts.html
@@ -6,6 +6,7 @@
         </select>
     </div>
     <hr />
+    <!-- change -->
     <label>Parts:</label>
     <div class="list-group">
         <div ng-repeat="part in parts| filter: {location: {name: selected}} track by $index">
