--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -34,6 +34,17 @@
             </div>
         </a>
 
+        <a snap-close class="list-group-item" href="/#/vehicles">
+            <div class="row">
+                <div class="col-xs-9 text-left">
+                    <span>Vehicles</span>
+                </div>
+                <div class="col-xs-3 text-right">
+                    <span class="glyphicon glyphicon-question-sign"></span>
+                </div>
+            </div>
+        </a>
+
         <a snap-close class="list-group-item" ng-if="!isAuthenticated()" href="/#/login">
             <div class="row">
                 <div class="col-xs-9 text-left">
@@ -69,6 +80,7 @@
             <ul class="nav navbar-nav">
                 <li ng-class="{ active: isActive('/')}"><a href="#/">Home</a></li>
                 <li ng-class="{ active: isActive('/parts')}"><a href="#/parts">Parts</a></li>
+                <li ng-class="{ active: isActive('/vehicles')}"><a href="#/vehicles">Vehicles</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li ng-if="!isAuthenticated()"><a href="#/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
