added department and fix `all` bug.

--- a/frontend/static/frontend/partials/parts.html
+++ b/frontend/static/frontend/partials/parts.html
@@ -9,7 +9,7 @@
     <!-- change -->
     <label>Parts:</label>
     <div class="list-group">
-        <div ng-repeat="part in parts| filter: (selected == 'All' ? '' : {location: {name: selected}}) track by $index">
+        <div ng-repeat="part in parts track by $index">
             <a href class="list-group-item" ng-click="part.isCollapsed = !part.isCollapsed"
                 ng-class="{'active': part.isCollapsed}">{{ part.number }}</a>
             <div uib-collapse="!part.isCollapsed">
