--- a/frontend/static/frontend/partials/parts.html
+++ b/frontend/static/frontend/partials/parts.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" ng-show="ready">
+<div class="container-fluid" ng-if="ready">
     <div class="form-group">
         <label for="sel1">Location:</label>
         <select class="form-control" id="sel1" ng-model="selected">
@@ -7,9 +7,9 @@
     </div>
     <hr />
     <!-- change -->
-    <label>Parts:</label>
+    <label>{{ getNumberOfParts(parts, selected) }} Parts:</label>
     <div class="list-group">
-        <div ng-repeat="part in parts track by $index">
+        <div ng-repeat="part in parts| filter: (selected == 'All' ? '' : {location: {name: selected}}) track by $index">
             <a href class="list-group-item" ng-click="part.isCollapsed = !part.isCollapsed"
                 ng-class="{'active': part.isCollapsed}">{{ part.number }}</a>
             <div uib-collapse="!part.isCollapsed">
@@ -28,7 +28,8 @@
                             <label>To stock:</label> {{ part.qty_to_stock }} <br />
                             <label>On hand:</label> {{ part.qty_on_hand }} <br />
                             <label>On order:</label> {{ part.qty_on_order }} <br />
-                            <label>Price:</label> ${{ part.price }} <br />
+                            <label>Unit Price:</label> ${{ part.price }} <br />
+                            <label>Total Price:</label> ${{ part.price * part.qty_on_hand }} <br />
                             <label>Vendor:</label> {{ part.vendor.name }} <br />
                         </div>
                     </div>
