--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -110,7 +110,7 @@
 
 <script src="{% static "frontend/bower_components/snapjs/snap.min.js" %}"></script>
 <script src="{% static "frontend/bower_components/angular-snap/angular-snap.min.js" %}"></script>
-
+<script src="{% static "frontend/bower_components/angular-file-saver/dist/angular-file-saver.bundle.min.js" %}"></script>
 
 <script src="{% static "frontend/js/functions.js" %}"></script>
 
@@ -125,7 +125,8 @@
         'ngRoute',
         'ngSanitize',
         'satellizer',
-        'snap'
+        'snap',
+        'ngFileSaver'
     ]);
 </script>
 
