--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -81,6 +81,7 @@
                 <li ng-class="{ active: isActive('/')}"><a href="#/">Home</a></li>
                 <li ng-class="{ active: isActive('/parts')}"><a href="#/parts">Parts</a></li>
                 <li ng-class="{ active: isActive('/vehicles')}"><a href="#/vehicles">Vehicles</a></li>
+                <li ng-class="{ active: isActive('/partlists')}"><a href="#/partlists">Part Lists</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li ng-if="!isAuthenticated()"><a href="#/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
