fixed image size.

--- a/frontend/static/frontend/partials/parts/locations.html
+++ b/frontend/static/frontend/partials/parts/locations.html
@@ -83,7 +83,7 @@
 
 <script type="text/ng-template" id="image.html">
     <div class="modal-body text-center">
-        <img ng-src="{{ part.image }}" />
+        <img width="100%" ng-src="{{ part.image }}" />
     </div>
     <div class="modal-footer">
         <div class="text-center">
