added work order nav item.

--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -90,6 +90,7 @@
                 <li ui-sref-active="active"><a ui-sref="home">Home</a></li>
                 <li ui-sref-active="active"><a ui-sref="parts">Parts</a></li>
                 <li ui-sref-active="active"><a ui-sref="vehicles">Vehicles</a></li>
+                <li ui-sref-active="active"><a ui-sref="workOrders">Work Orders</a></li>
                 <li ui-sref-active="active"><a ui-sref="blog.list">Blog</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
