--- a/frontend/static/frontend/partials/workOrders/workOrders.html
+++ b/frontend/static/frontend/partials/workOrders/workOrders.html
@@ -6,12 +6,11 @@
         </select>
     </div>
     <hr />
-    {{ selected }}
     <!-- change -->
     <label>{{ getNumberOfWorkOrder(workOrders, selected) }} Work Orders:</label>
     <div class="pull-right"><a href ng-click="exportCSV(workOrders, selected)">export .csv</a></div>
     <div class="list-group">
-        <div ng-repeat="workOrder in workOrders| filter: (selected == 'All' ? '' : {vehicle: selected}) | filter: {active: active} track by $index">
+        <div ng-repeat="workOrder in workOrders| filter: (selected == 'All' ? '' : {vehicle: parseInt(selected)}) : true | filter: {active: active} track by $index">
             <a href class="list-group-item" ng-click="workOrder.isCollapsed = !workOrder.isCollapsed"
                ng-class="{'active': workOrder.isCollapsed}">{{ workOrder.number }}</a>
             <div uib-collapse="!workOrder.isCollapsed">
@@ -26,6 +25,10 @@
                                     </tr>
                                 </thead>
                                 <tbody>
+                                    <tr>
+                                        <td class="text-capitalize">Vehicle: </td>
+                                        <td>{{ getVehicleModel(workOrder.vehicle) }}</td>
+                                    </tr>
                                     <tr ng-repeat="item in ['vehicle', 'problem', 'solution', 'hours', 'active', 'note']">
                                         <td class="text-capitalize">{{ item }}: </td>
                                         <td>{{ workOrder[item] }}</td>
