add work order to mobile tab.

--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -43,6 +43,18 @@
             </div>
         </a>
 
+
+        <a snap-close class="list-group-item" ui-sref="workOrders">
+            <div class="row">
+                <div class="col-xs-9 text-left">
+                    <span>Work Orders</span>
+                </div>
+                <div class="col-xs-3 text-right">
+                    <span class="glyphicon glyphicon-question-sign"></span>
+                </div>
+            </div>
+        </a>
+
         <a snap-close class="list-group-item" ui-sref="blog.list">
             <div class="row">
                 <div class="col-xs-9 text-left">
